# vector-pdf

./: .cursorrules  .env.example  .gitignore  CHUNKING_ADVANCED.md  CONTRIBUTING.md  INSTALL_POPPLER.md  LICENSE  PERFORMANCE.md  README.md  ask.py  compare_extraction_methods.py  eval_rag.py  generate.py  main.py  pyproject.toml  review_chunks.py  ui.py
docs/: architecture.md  configuration.md
eval/: questions.example.json
src/: __init__.py  pdf_analyzer.py
src/cli/: __init__.py  cli.py
src/core/: __init__.py  cache.py  config.py  exceptions.py  logging_config.py  metrics.py  progress.py  retry.py  singletons.py
src/evaluation/: __init__.py  rag_eval.py
src/extractors/: __init__.py  mistral_ocr_extractor.py  scan_extractor.py  text_extractor.py  text_extractor_v2.py
src/pipeline/: __init__.py  interfaces.py  models.py  pipeline.py  services.py
src/processors/: __init__.py  advanced_chunker.py  boundary_fallback.py  chunk_merger.py  chunk_prioritizer.py  chunk_quality_filter.py  chunker.py  chunking_strategies.py  contextual_augmenter.py  metadata_enricher.py  section_detector.py  state_manager.py  text_cleaner.py  token_based_chunker.py
src/ui/: __init__.py  app.py  dialogs.py  main_window.py  workers.py
src/vectorization/: __init__.py  embeddings.py  namespace_classifier.py  smart_batching.py  vector_store.py
